--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-VITE_APPWRITE_URL="https://cloud.appwrite.io/v1"
-VITE_APPWRITE_PROJECT_ID =""
-VITE_APPWRITE_DATABASE_ID=""
-VITE_APPWRITE_COLLECTION_ID=""
-VITE_APPWRITE_BUCKET_ID=""
+VITE_APPWRITE_URL = "https://cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID = "66e0ca61000a7bf4a7bb"
+VITE_APPWRITE_DATABASE_ID = "66e0cb38001ac271deff"
+VITE_APPWRITE_COLLECTION_ID = "66e0cb9a0014b69f7aae"
+VITE_APPWRITE_BUCKET_ID = "66e0cdce0006d6c56579"
